<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:actionbarcompat="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/userIcon"
            android:icon="@drawable/user"
            android:orderInCategory="100"
            actionbarcompat:showAsAction="ifRoom"
            android:title="Mon compte"
            android:onClick="authActivity"/>
    <item
            android:id="@+id/geolocalisation"
            android:icon="@drawable/localisation"
            android:orderInCategory="100"
            actionbarcompat:showAsAction="ifRoom"
            android:title="Recherche par localisation"/>
    <item
            android:id="@+id/parametres"
            android:icon="@drawable/tag"
            android:orderInCategory="100"
            actionbarcompat:showAsAction="ifRoom"
            android:title="Recherche par tag">
        <menu>
            <item
                    android:id="@+id/tousLesTags"
                    android:icon="@drawable/tag_icon"
                    android:orderInCategory="100"
                    actionbarcompat:showAsAction="ifRoom"
                    android:title="@string/toutes_les_cat_gories">
            </item>
            <item
                    android:id="@+id/bricolageEtJardinage"
                    android:icon="@drawable/diy"
                    android:orderInCategory="100"
                    actionbarcompat:showAsAction="ifRoom"
                    android:title="@string/bricolage_et_jardinage">
            </item>
            <item
                    android:id="@+id/coursParticuliers"
                    android:icon="@drawable/book"
                    android:orderInCategory="100"
                    actionbarcompat:showAsAction="ifRoom"
                    android:title="@string/cours_particuliers">
            </item>
            <item
                    android:id="@+id/serviceADomicile"
                    android:icon="@drawable/menage"
                    android:orderInCategory="100"
                    actionbarcompat:showAsAction="ifRoom"
                    android:title="@string/service_domicile">
            </item>
            <item
                    android:id="@+id/covoiturage"
                    android:icon="@drawable/car"
                    android:orderInCategory="100"
                    actionbarcompat:showAsAction="ifRoom"
                    android:title="@string/covoiturage">
            </item>
            <item
                    android:id="@+id/cuisine"
                    android:icon="@drawable/cook"
                    android:orderInCategory="100"
                    actionbarcompat:showAsAction="ifRoom"
                    android:title="@string/cuisine">
            </item>
            <item
                    android:id="@+id/divers"
                    android:icon="@drawable/service_placeholder"
                    android:orderInCategory="100"
                    actionbarcompat:showAsAction="ifRoom"
                    android:title="@string/divers">
            </item>
        </menu>
    </item>
</menu>