<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	style="@style/CustomRelativeLayout"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
		<ImageView
				android:id="@+id/logo"
				style="@style/CustomLogoImageView"
				android:contentDescription="@string/app_name"
				android:layout_gravity="center"/>
		<TextView
				android:id="@+id/profile"
				style="@style/CustomStatusTextView"/>
		<TextView
				android:id="@+id/description_inscription"
				android:text="@string/connectez_vous_pour_acc_der_aux_diff_rentes_parties_de_l_application"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingBottom="10dp"
				android:textSize="24sp"
				android:textAlignment="center"
				android:textColor="@color/black"/>
		<LinearLayout
				android:id="@+id/email_password_fields"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingTop="@dimen/activity_horizontal_margin"
				android:orientation="vertical">

			<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/layout_email"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

				<EditText
						android:id="@+id/et_email"
						android:inputType="textEmailAddress"
						android:importantForAutofill="no"
						android:hint="@string/hint_email"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:maxLines="1"/>

			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/layout_password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					app:passwordToggleEnabled="true">

				<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/et_password"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/hint_password"
						android:maxLines="1"
						android:inputType="textPassword"/>

			</com.google.android.material.textfield.TextInputLayout>

		</LinearLayout>

		<LinearLayout
				android:id="@+id/email_password_buttons"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingTop="@dimen/activity_horizontal_margin"
				android:orientation="vertical">

			<Button
					android:id="@+id/email_sign_in_button"
					style="?android:attr/button"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/sign_in"
					android:theme="@style/ThemeOverlay.MyDarkButton"/>

			<Button
					android:id="@+id/email_create_account_button"
					style="?android:attr/button"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/create_account"
					android:theme="@style/ThemeOverlay.MyDarkButton"/>

		</LinearLayout>

		<LinearLayout
				android:id="@+id/signout_zone"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:visibility="gone">

			<Button
					android:id="@+id/verify_button"
					style="?android:attr/button"
					android:layout_width="wrap_content"
					android:layout_height="0dp"
					android:layout_weight="1"
					android:text="@string/verify"
					android:theme="@style/ThemeOverlay.MyDarkButton"
					android:visibility="gone"/>

			<Button
					android:id="@+id/sign_out_button"
					style="?android:attr/button"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/sign_out"
					android:theme="@style/ThemeOverlay.MyDarkButton"/>

		</LinearLayout>

	</LinearLayout>





</RelativeLayout>