<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:theme="@style/ToolbarColoredBackArrow"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarThumbVertical="@drawable/scrollbar_black">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".views.ServiceDetails"
                android:paddingTop="10dp"
                android:scrollIndicators="right"
                android:layout_marginBottom="40dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                style="@style/globalBackground">

            <LinearLayout android:id="@+id/titre_image"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="center"
                          android:orientation="vertical"
                          android:layout_marginBottom="30dp"
                          android:background="@drawable/rect_arrondi" android:paddingTop="10dp"
                          android:paddingLeft="20dp"
                          android:paddingRight="20dp" android:paddingBottom="30dp">

                <TextView android:id="@+id/title_service"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/titre"
                          android:textAlignment="center"
                          android:layout_marginBottom="20dp"
                          android:textSize="28sp"
                          android:textColor="@color/white"/>

                <ImageView android:id="@+id/image_placeholder"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:textAlignment="center"
                           android:contentDescription="@string/image_du_service"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="center"
                          android:orientation="vertical"
                          android:layout_below="@+id/titre_image">

                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/description"
                          android:textStyle="bold"
                          android:textColor="@color/black"
                          android:textSize="24sp">
                </TextView>

                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:id="@+id/description"
                          android:text="@string/description_example"
                          android:textAlignment="textStart"
                          android:layout_marginBottom="20dp"
                          android:textColor="@color/black"/>

                <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tag"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="24sp">
                </TextView>

                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:id="@+id/tag"
                          android:textAlignment="textStart"
                          android:textColor="@color/black"/>

                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:id="@+id/hours"
                          android:text="@string/hours"
                          android:textAlignment="textStart"
                          android:paddingBottom="20dp"
                          android:textColor="@color/black"
                          android:layout_marginTop="20dp"/>

                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/address"
                          android:textStyle="bold"
                          android:textColor="@color/black"
                          android:textSize="24sp">
                </TextView>

                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:id="@+id/address"
                          android:text="@string/address_example"
                          android:textAlignment="textStart"
                          android:textColor="@color/black"/>

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="450dp"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp">
                    <com.example.localim.views.helpers.CustomMapView
                            android:id="@+id/map"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scrollbars="vertical"/>
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
